--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,9 +154,9 @@ jobs:
             npm install --save-dev webpack@5.73.0
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+      # - slack/notify:
+      #     event: fail
+      #     template: basic_fail_1
 
   deploy-infrastructure:
     docker:
