--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,6 +153,7 @@ jobs:
             npm update mkdirp --depth 6
             npm install --save-dev webpack@5.73.0
             npm audit fix --audit-level=critical --force
+            npm audit fix
             npm audit --audit-level=critical
       # - slack/notify:
       #     event: fail
