--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix
+            npm audit fix 
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
@@ -156,9 +156,9 @@ jobs:
             npm audit fix --audit-level=critical --force
            
             npm audit --audit-level=critical
-      # - slack/notify:
-      #     event: fail
-      #     template: basic_fail_1
+      - slack/notify:
+           event: fail
+           template: basic_fail_1
 
   deploy-infrastructure:
     docker:
